<resources>
    <string name="app_name">HealthyApp</string>
    <string name="homepage_greeting">Hello! Welcome to HealthyApp!</string>
    <string name="workout_page_button">Workout Tracker</string>
    <string name="food_page_button">Food Tracker</string>
    <string name="notes_page_button">Notes</string>
    <string name="weight_hint">Enter Today\'s Weight (In lbs)</string>
    <string name="weight_page_button">Weight Tracker</string>
    <string name="health_summary_button">Health Summary</string>
    <string name="submit_entry">Submit Entry</string>
    <string name="goals_button">Health Goals</string>
    <string name="home_button">Return Home</string>
    <string name="generic_food">Show Suggested Foods</string>
    <string name="food_favorites_list">Favorites List</string>
    <string name="generic_food_dialog_title">Select an Item</string>
    <string name="favorite_food_dialog_title">Select Your Favorites</string>
    <string name="gustie_food_dialog_title">Select Your Caf Foods</string>
    <string name="food_type_hint">Enter food type</string>
    <string name="food_cals_hint">Enter amount of calories</string>
    <string name="mood_title_text">How are you feeling today?</string>
    <string name="mood_happy">Great!</string>
    <string name="mood_meh">Fine.</string>
    <string name="mood_bad">Not great.</string>
    <string name="sample_quote">You can do this!</string>
    <string name="back_button_text">Return to homepage</string>
    <string name="sleep_title_text">Sleep Tracker</string>
    <string name="sleep_hint_text">Enter how many hours of sleep you got last night</string>
    <string name="sleep_tracker_button">Sleep Tracker</string>
    <string name="quotes_page_home_button">Motivational Quotes</string>
    <string name="mood_tracker_button">Mood Tracker</string>
    <string name="enter_button">Enter</string>
    <string name="new_quote">Display a new quote</string>
    <string name="food_graph_button">View Summary</string>
    <string name="food_graph_return_button">Return To Entry</string>
    <string name="avg_burned_cals">Burned an average of %1$s cals per day</string>
    <string name="avg_cals_eaten">Ate an average of %1$s calories per day</string>
    <string name="avg_time_slept">Slept an average of %1$s hours each night</string>
    <string name="avg_mood">Been %1$s</string>
    <string name="timer_button">Focus Timer</string>
    <string name="gustie_foods_button">Gustie Foods</string>
    <string name="add_Time_Button">Enter Time</string>
    <string name="start_timer">Start Timer</string>
    <string name="restart_timer">Restart</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Yes, delete my data.</string>
    <string name="delete_date_dialog">Are you sure you want to delete all of your data?</string>
</resources>