<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mood_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="24dp"
        android:text="@string/mood_title_text"/>

    <Button
        android:id="@+id/mood_happy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_happy"/>

    <Button
        android:id="@+id/mood_meh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_meh"/>

    <Button
        android:id="@+id/mood_bad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_bad"/>

</LinearLayout>