<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/gac_logo"
        android:layout_width="112dp"
        android:layout_height="103dp"
        android:src="@drawable/gac_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id = "@+id/greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/homepage_greeting"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gac_logo" />

    <Button
        android:id="@+id/summary_page_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/health_summary_button"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workout_page_button" />

    <Button
        android:id="@+id/workout_page_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/workout_page_button"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text">
    </Button>

    <Button
        android:id="@+id/food_page_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/food_page_button"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text" />

    <Button
        android:id="@+id/weight_page_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/weight_page_button"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_page_button" />

    <Button
        android:id="@+id/notes_page_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notes_page_button"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_page_button" />

    <Button
        android:id="@+id/goals_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/goals_button"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_page_button" />

    <Button
        android:id="@+id/sleep_page_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sleep_tracker_button"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_page_button" />

    <Button
        android:id="@+id/quotes_page_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/quotes_page_home_button"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_page_button" />

    <Button
        android:id="@+id/mood_page_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/mood_tracker_button"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goals_button" />

    <Button
        android:id="@+id/timer_button"
        style="@style/HomepageButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/timer_button"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_page_button" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="81dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/black"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>