<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="30dp"
        android:hint="Enter Focus Time in minutes" />

    <Button
        android:id="@+id/add_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_Time_Button" />
<LinearLayout
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_main_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="75dp"
        android:text="timer" />

    <Button
        android:id="@+id/btn_main_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_timer" />

    <Button
        android:id="@+id/btn_main_rest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart_timer" />
</LinearLayout>
</LinearLayout>